workspace = { members = ["test-code-base-rust"] }
[package]
name = "asterisk"
version = "0.1.0"
edition = "2021"

[dependencies]
jwalk = "0.8.1"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.114"
tree-sitter = "0.20.9"

[build-dependencies]
cc="*"

[[example]]
name = "cli"
