[package]
name = "asterisk"
version = "0.1.0"
authors = ["stition Team <hello@stition.ai>"]
description = "Universal language-agnostic AST walking and accurate call stack generation with tree-sitter"
edition = "2021"
license = "MIT"

[dependencies]
jwalk = "0.8.1"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.114"
tree-sitter = "0.20.9"
toml = "0.8.11"

[build-dependencies]
cc = "1.0.94"

[[example]]
name = "cli"
